# motor_driver_linux

./: CMakeLists.txt  CanBase.cpp  CanBase.hpp  Makefile  Nimotion.hpp  README.md  UsbCanBus.cpp  atHome.cpp  ctrl_step.hpp  disable.cpp  goHome.cpp  jointTest.cpp  jointTestOfServo.cpp  linearInterpolation.cpp  log.txt  moveByStep.cpp  moveByStepOfServo.cpp  setHome.cpp  stepLinerInter.cpp  velPlot.py
include/: CanBase.hpp  Nimotion.hpp  SMS_STS.h  SMS_STS_THREAD.h  UsbCanBus.hpp  ctrl_step.hpp  servocontrol.h
log/: log_lock.txt  log_unlock.txt  log_unlock2.txt  log_unlock3.txt  log_unlock4.txt  log_unlock5.txt
src/: CanBase.cpp  Nimotion.cpp  SMS_STS_THREAD.cpp  servocontrol.cpp
test_elf/: ServoMoveByStep.elf  atHome.elf  jointTest.elf  moveBystep.elf
